// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Client File Generation > generates correctly with custom query client 1`] = `
"import { ClientManager } from "@ic-reactor/react"
import { queryClient } from "../query-client"

/**
 * IC Reactor Client Manager
 * 
 * Auto-generated by @ic-reactor/codegen
 */
export const clientManager = new ClientManager({
  queryClient,
  withCanisterEnv: true,
})
"
`;

exports[`Client File Generation > generates correctly with default host 1`] = `
"import { ClientManager } from "@ic-reactor/react"
import { QueryClient } from "@tanstack/react-query"

export const queryClient = new QueryClient()

/**
 * IC Reactor Client Manager
 * 
 * Auto-generated by @ic-reactor/codegen
 */
export const clientManager = new ClientManager({
  queryClient,
  withCanisterEnv: true,
})
"
`;
